--- a/index.html
+++ b/index.html
@@ -527,6 +527,8 @@
             <h2>Ваш цифровой портрет.. немного о процессе:</h2>
             <p>Рад творческому сотрудничеству с вами! Я создаю для вас портрет в технике цифровой живописи. Это не фотография, а уникальное арт-произведение, где главная задача — передать настроение и создать гармоничный образ.</p>
             <p>Что делает ваш портрет особенным: черты лица, свет и фактуры могут быть специально стилизованы для большей художественной выразительности. Именно это придает портрету характер и ценность. Гармония впечатления. Я фокусируюсь на общей целостности и эстетике картины. Иногда для достижения идеального визуального баланса некоторые детали прорабатываются не с фотографической точностью, а как элемент искусства.</p>
+            <p>Внимание, важная информация о цветопередаче: современные дисплеи смартфонов и мониторы часто имеют повышенную яркость и насыщенность. Это создает потрясающую картинку на экране, но физические свойства фотобумаги иной. Печать в профессиональной лаборатории Fuji обеспечивает наиболее точные и естественные цвета. Поэтому финальные отпечатки могут выглядеть немного более мягкими и менее «ядерными», чем на вашем экране. Это не недостаток, а особенность технологии перевода цифрового изображения в материальный формат.</p>
+            <p>Я гарантирую, что печать будет выполнена на качественном оборудовании с точной цветокоррекцией.</p>
             <p>Благодарю за доверие и понимание! Я делаю всё, чтобы результат вас искренне радовал. С уважением, Александр Корсун</p>
         </div>
     </div>
@@ -628,7 +630,7 @@
                 description: 'Штурман осенней лужи'
             },
             {
-                src: 'images/образец_№12_мальч_ тыква.jpg',
+                src: 'images/образец_№12_мальч_тыква.jpg',
                 width: 688,
                 height: 1024,
                 title: 'Образец №12',
@@ -768,7 +770,7 @@
             infoItem.setAttribute('data-caption', 'Информация о процессе создания');
             infoItem.innerHTML = `
                 <h3>Info</h3>
-                <p>О процессе создания цифровых портретов</p>
+                <p></p>
             `;
             
             galleryElement.appendChild(infoItem);
