--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
         // Данные о изображениях из папки images
         const images = [
             {
-                src: 'images/образец_№1_мал_ёжик.jpg',
+                src: 'images/obrazec_1_mal_ezhik.jpg',
                 width: 688,
                 height: 1024,
                 title: 'Образец №1',
@@ -828,4 +828,5 @@
     });
     </script>
 </body>
+
 </html>
