--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <!-- Мета-теги для соцсетей -->
     <meta property="og:title" content="Digital Art Gallery - Осенние истории">
     <meta property="og:description" content="Галерея цифровых портретов в осенней тематике">
-    <meta property="og:image" content="https://korsunfoto.github.io/autumn-2025/images/образец_№1_мал_ёжик.jpg">
+    <meta property="og:image" content="https://korsunfoto.github.io/autumn-2025/images/obrazec_1_mal_ezhik.jpg">
     <meta property="og:url" content="https://korsunfoto.github.io/autumn-2025/">
     <meta property="og:type" content="website">
+    <meta property="og:locale" content="ru_RU">
+    <meta property="og:site_name" content="Digital Art Gallery">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Digital Art Gallery - Осенние истории">
+    <meta name="twitter:description" content="Галерея цифровых портретов в осенней тематике">
+    <meta name="twitter:image" content="https://korsunfoto.github.io/autumn-2025/images/obrazec_1_mal_ezhik.jpg">
     
     <!-- Подключаем шрифты -->
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
@@ -830,3 +835,4 @@
 </body>
 
 </html>
+
