--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Мета-теги для соцсетей -->
     <meta property="og:title" content="Digital Art Gallery - Осенние истории">
     <meta property="og:description" content="Галерея цифровых портретов в осенней тематике">
-    <meta property="og:image" content="https://korsunfoto.github.io/autumn-2025/images/obrazec_1_mal_ezhik.jpg">
+    <meta property="og:image" content="https://korsunfoto.github.io/autumn-2025/images/obrazec_7_dev_kotik.jpg">
     <meta property="og:url" content="https://korsunfoto.github.io/autumn-2025/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ru_RU">
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Digital Art Gallery - Осенние истории">
     <meta name="twitter:description" content="Галерея цифровых портретов в осенней тематике">
-    <meta name="twitter:image" content="https://korsunfoto.github.io/autumn-2025/images/obrazec_1_mal_ezhik.jpg">
+    <meta name="twitter:image" content="https://korsunfoto.github.io/autumn-2025/images/obrazec_7_dev_kotik.jpg">
     
     <!-- Подключаем шрифты -->
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
@@ -299,6 +299,7 @@
         font-weight: 400;
         text-align: justify;
         hyphens: auto;
+        text-align-last: left;
     }
 
     .info-fullscreen p:last-child {
@@ -331,6 +332,20 @@
         background-color: var(--dark-bg) !important;
     }
 
+    /* Новые стили для улучшения навигации свайпом */
+    .pswp__scroll-wrap {
+        touch-action: pan-y;
+    }
+
+    .info-fullscreen {
+        pointer-events: none;
+    }
+
+    .info-fullscreen-content {
+        pointer-events: auto;
+    }
+
+    /* Улучшаем отзывчивость для мобильных устройств */
     @media (max-width: 1200px) {
         .gallery {
             grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -462,6 +477,12 @@
             font-size: 0.9rem;
             line-height: 1.5;
             text-align: left;
+            text-align-last: left;
+        }
+
+        /* Улучшаем поддержку свайпа на мобильных */
+        .pswp__item {
+            touch-action: pan-y;
         }
     }
 
@@ -600,7 +621,7 @@
                 description: 'Нежность'
             },
             {
-                src: 'images/образец_№7_дев_котик.jpg',
+                src: 'images/obrazec_7_dev_kotik.jpg',
                 width: 688,
                 height: 1024,
                 title: 'Образец №7',
@@ -833,6 +854,4 @@
     });
     </script>
 </body>
-
 </html>
-
