--- a/index.html
+++ b/index.html
@@ -558,8 +558,8 @@
         <div class="info-fullscreen-content">
             <h2>Цифровой портрет: искусство, а не фото</h2>
             <p>Ваш портрет создается в технике цифровой живописи. Это уникальное произведение, где мы сознательно стилизуем черты лица и детали для художественной выразительности. Фокус на общей гармонии и настроении может означать отклонение от фотографической точности — это и есть ценность искусства.</p>
-            <p>Чтобы избежать недопонимания:</p>
-            <p>Фотографии на экране вашего телефона выглядят очень ярко из-за настроек дисплея. При печати в лаборатории цвета становятся более натуральными и естественными.</p>
+            <p style="margin: 0;">Чтобы избежать недопонимания:</p>
+            <p style="margin: 0;">Фотографии на экране вашего телефона выглядят очень ярко из-за настроек дисплея. При печати в лаборатории цвета становятся более натуральными и естественными.</p>
             <p>Помните: то, что вы видите на отпечатках — это и есть реальное, качественное фото. Ожидайте именно такой, спокойной и приятной глазу цветопередачи.</p>
             <p>Спасибо, что были внимательны!</p>
         </div>
